--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,5 +32,6 @@ spring.messages.basename=messages
 spring.messages.encoding=UTF-8
 
 api.security.token.secret=${JWT_SECRET:my-secret-key}
-# Desabilita o Spring Security na aplicacao
 spring.jpa.open-in-view=false
+
+spring.profiles.active=dev
