--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,22 @@
+spring.datasource.url=jdbc:h2:mem:test;MODE=MySQL;
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
-spring.datasource.username=sa
-spring.datasource.password=sa
+spring.datasource.username=
+spring.datasource.password=
+# We add the MySQL Dialect so that it understands and generates the query based on MySQL
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-security.ignored=/**
+spring.h2.console.enabled=true
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+api.security.token.secret=${JWT_SECRET:my-secret-key}
+spring.sql.init.mode=always
+spring.jpa.open-in-view=false
+spring.jpa.properties.hibernate.show_sql=true
+# Perfil ativo
+spring.profiles.active=test
+# Se utiliza flyway no ambiente dev, setar para false para não executar migrations
+spring.flyway.enabled=false
