--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,16 @@ api.security.token.secret=${JWT_SECRET:my-secret-key}
 spring.jpa.open-in-view=false
 
 spring.profiles.active=dev
+
+
+
+
+
+
+# sonar.properties
+sonar.projectKey=gerenciador-estacionamento
+sonar.projectName=gerenciador-estacionamento
+sonar.host.url=http://localhost:9000
+sonar.token=sqp_171e65bad70581cbe6cdffeafec3b905c16f3225
+sonar.login=admin
+sonar.password=master
