Ajuste na injeção de dependências

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,41 +1,33 @@
-# Configuracao para PostgresSQL
+# Configuracao para PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/gerenciador_estacionamento?currentSchema=gerenciador_estacionamento
 # Descomentar linha para rodar docker compose up para subir os containers da aplicacao
 #spring.datasource.url=jdbc:postgresql://postgres:5432/gerenciador_estacionamento
 spring.datasource.username=postgres
 spring.datasource.password=master
+server.port=8080
+# Configuração das flyways
 flyway.schemas=gerenciador_estacionamento
-server.port=8081
-
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-#spring.jackson.serialization.write-dates-as-timestamps=false
-
 # Habilitar o devtools
 spring.devtools.restart.enabled=true
 # Monitorar apenas os diretorios especificados
 spring.devtools.restart.additional-paths=src/main/java/
 spring.messages.basename=messages
-spring.messages.encoding=UTF8
-
+spring.messages.encoding=UTF-8
 api.security.token.secret=${JWT_SECRET:my-secret-key}
 spring.jpa.open-in-view=false
-
+# Perfil ativo
 spring.profiles.active=dev
 
-
-
-
-
-
-# sonar.properties
+# Configuração do Sonar
 sonar.projectKey=gerenciador-estacionamento
 sonar.projectName=gerenciador-estacionamento
 sonar.host.url=http://localhost:9000
-sonar.token=sqp_171e65bad70581cbe6cdffeafec3b905c16f3225
+sonar.token=sqp_d094d5ed1e259f9e7f528d1b18dd5731c38019be
 sonar.login=admin
 sonar.password=master
