Ajuste nos imports e comentários

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/gerenciador_estacionament
 spring.datasource.username=postgres
 spring.datasource.password=master
 server.port=8080
-# Configuração das flyways
+# Configuracao das flyways
 flyway.schemas=gerenciador_estacionamento
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
@@ -24,7 +24,7 @@ spring.jpa.open-in-view=false
 # Perfil ativo
 spring.profiles.active=dev
 
-# Configuração do Sonar
+# Configuracao do Sonar
 sonar.projectKey=gerenciador-estacionamento
 sonar.projectName=gerenciador-estacionamento
 sonar.host.url=http://localhost:9000
