--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,20 +9,20 @@ services:
       POSTGRES_PASSWORD: master
     ports:
       - "5432:5432"
-    networks:
-      - minha-rede-docker
+    # networks:
+    #   - minha-rede-docker
 
-  java-app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - "8081:8081"
-    networks:
-      - minha-rede-docker
-    depends_on:
-      - postgres
+#   java-app:
+#     build:
+#       context: .
+#       dockerfile: Dockerfile
+#     ports:
+#       - "8081:8081"
+#     networks:
+#       - minha-rede-docker
+#     depends_on:
+#       - postgres
 
-networks:
-  minha-rede-docker:
-    driver: bridge
+# networks:
+#   minha-rede-docker:
+#     driver: bridge
